--- a/package.json
+++ b/package.json
@@ -1,20 +1,22 @@
 {
-  "private": true,
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
-  "dependencies": {
-    "@material-tailwind/react": "0.3.4",
-    "firebase": "^8.7.1",
-    "next": "latest",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2"
-  },
-  "devDependencies": {
-    "autoprefixer": "^10.2.6",
-    "postcss": "^8.3.5",
-    "tailwindcss": "^2.2.4"
-  }
+	"private": true,
+	"scripts": {
+		"dev": "next dev",
+		"build": "next build",
+		"start": "next start"
+	},
+	"dependencies": {
+		"@material-tailwind/react": "0.3.4",
+		"@next-auth/firebase-adapter": "^0.1.2",
+		"firebase": "^8.7.1",
+		"next": "latest",
+		"next-auth": "^3.27.3",
+		"react": "^17.0.2",
+		"react-dom": "^17.0.2"
+	},
+	"devDependencies": {
+		"autoprefixer": "^10.2.6",
+		"postcss": "^8.3.5",
+		"tailwindcss": "^2.2.4"
+	}
 }
